repairnator.maven.buildproject.log
/root/workspace/spring-projects/spring-data-commons/220891351/src/test/java/org/springframework/data/repository/core/support/EventPublishingRepositoryProxyPostProcessorUnitTests.java:192: error: cannot find symbol
		@Getter(onMethod = @__(@DomainEvents)) Collection<? extends Object> events;
		                    ^
  symbol:   class __
  location: class MultipleEvents
/root/workspace/spring-projects/spring-data-commons/220891351/src/test/java/org/springframework/data/repository/core/support/EventPublishingRepositoryProxyPostProcessorUnitTests.java:197: error: cannot find symbol
		@Getter(onMethod = @__(@DomainEvents)) Object event;
		                    ^
  symbol:   class __
  location: class OneEvent
2 errors
spring-data-commons ---
[INFO] Changes detected - recompiling the module!
[INFO] Compiling 394 source files to /root/workspace/spring-projects/spring-data-commons/220891351/target/classes
[INFO] /root/workspace/spring-projects/spring-data-commons/220891351/src/main/java/org/springframework/data/web/config/SpringDataWebConfiguration.java: Some input files use or override a deprecated API.
[INFO] /root/workspace/spring-projects/spring-data-commons/220891351/src/main/java/org/springframework/data/web/config/SpringDataWebConfiguration.java: Recompile with -Xlint:deprecation for details.
[INFO] 
[INFO] --- apt-maven-plugin:1.1.3:test-process (default) @ spring-data-commons ---
[INFO] 
[INFO] --- maven-resources-plugin:2.6:testResources (default-testResources) @ spring-data-commons ---
[INFO] Using 'UTF-8' encoding to copy filtered resources.
[INFO] Copying 12 resources
[INFO] 
[INFO] --- maven-compiler-plugin:3.6.1:testCompile (default-testCompile) @ spring-data-commons ---
[INFO] Changes detected - recompiling the module!
[INFO] Compiling 237 source files to /root/workspace/spring-projects/spring-data-commons/220891351/target/test-classes
[INFO] /root/workspace/spring-projects/spring-data-commons/220891351/src/test/java/org/springframework/data/projection/ProjectingMethodInterceptorUnitTests.java: Some input files use or override a deprecated API.
[INFO] /root/workspace/spring-projects/spring-data-commons/220891351/src/test/java/org/springframework/data/projection/ProjectingMethodInterceptorUnitTests.java: Recompile with -Xlint:deprecation for details.
[INFO] /root/workspace/spring-projects/spring-data-commons/220891351/src/test/java/org/springframework/data/mapping/context/PersistentEntitiesUnitTests.java: /root/workspace/spring-projects/spring-data-commons/220891351/src/test/java/org/springframework/data/mapping/context/PersistentEntitiesUnitTests.java uses unchecked or unsafe operations.
[INFO] /root/workspace/spring-projects/spring-data-commons/220891351/src/test/java/org/springframework/data/mapping/context/PersistentEntitiesUnitTests.java: Recompile with -Xlint:unchecked for details.
[INFO] 
[INFO] --- maven-surefire-plugin:2.19.1:test (default-test) @ spring-data-commons ---
[INFO] Tests are skipped.
[INFO] 
[INFO] --- maven-jar-plugin:3.0.2:jar (default-jar) @ spring-data-commons ---
[INFO] Building jar: /root/workspace/spring-projects/spring-data-commons/220891351/target/spring-data-commons-2.0.0.BUILD-SNAPSHOT.jar
[INFO] 
[INFO] >>> maven-source-plugin:3.0.1:jar (attach-sources) > generate-sources @ spring-data-commons >>>
[INFO] 
[INFO] --- maven-enforcer-plugin:1.3.1:enforce (enforce-rules) @ spring-data-commons ---
[INFO] Skipping Rule Enforcement.
[INFO] 
[INFO] <<< maven-source-plugin:3.0.1:jar (attach-sources) < generate-sources @ spring-data-commons <<<
[INFO] 
[INFO] --- maven-source-plugin:3.0.1:jar (attach-sources) @ spring-data-commons ---
[INFO] Building jar: /root/workspace/spring-projects/spring-data-commons/220891351/target/spring-data-commons-2.0.0.BUILD-SNAPSHOT-sources.jar
[INFO] 
[INFO] --- maven-install-plugin:2.4:install (default-install) @ spring-data-commons ---
[INFO] Installing /root/workspace/spring-projects/spring-data-commons/220891351/target/spring-data-commons-2.0.0.BUILD-SNAPSHOT.jar to /root/./workspace/spring-projects/spring-data-commons/220891351/.m2/org/springframework/data/spring-data-commons/2.0.0.BUILD-SNAPSHOT/spring-data-commons-2.0.0.BUILD-SNAPSHOT.jar
[INFO] Installing /root/workspace/spring-projects/spring-data-commons/220891351/pom.xml to /root/./workspace/spring-projects/spring-data-commons/220891351/.m2/org/springframework/data/spring-data-commons/2.0.0.BUILD-SNAPSHOT/spring-data-commons-2.0.0.BUILD-SNAPSHOT.pom
[INFO] Installing /root/workspace/spring-projects/spring-data-commons/220891351/target/spring-data-commons-2.0.0.BUILD-SNAPSHOT-sources.jar to /root/./workspace/spring-projects/spring-data-commons/220891351/.m2/org/springframework/data/spring-data-commons/2.0.0.BUILD-SNAPSHOT/spring-data-commons-2.0.0.BUILD-SNAPSHOT-sources.jar
[INFO] ------------------------------------------------------------------------
[INFO] BUILD SUCCESS
[INFO] ------------------------------------------------------------------------
[INFO] Total time: 35.741 s
[INFO] Finished at: 2017-05-11T13:04:49+02:00
[INFO] Final Memory: 63M/1615M
[INFO] ------------------------------------------------------------------------
